# projet_opengl

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md  cmake_commands.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: app.cpp  app.hpp  buffer_data.hpp  camera.hpp  controls.cpp  controls.hpp  flying_camera.cpp  flying_camera.hpp  globject.cpp  globject.hpp  keybinds.hpp  main.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_program.cpp  shader_program.hpp  shaders.cpp  shaders.hpp  spline.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex.cpp  vertex.hpp
src/buffer_objects/: uniform_buffer_object.hpp  vertex_buffer_object.hpp
src/camera/: camera.hpp  flying_camera.cpp  flying_camera.hpp  following_camera.cpp  following_camera.hpp
src/gl_wrappers/: frame_buffer.cpp  frame_buffer.hpp  render_buffer.cpp  render_buffer.hpp  shader.cpp  shader.hpp  shader_manager.hpp  shader_program.cpp  shader_program.hpp  shader_program_manager.cpp  shader_program_manager.hpp  texture.cpp  texture.hpp  texture_cube_map.cpp  texture_cube_map.hpp  uniform.cpp  uniform.hpp  uniform_buffer_object.cpp  uniform_buffer_object.hpp  vertex_buffer_object.cpp  vertex_buffer_object.hpp
src/lighting/: directional_light.cpp  directional_light.hpp
src/models/barrel/: barrel.mtl  material.mtl
src/models/building_1/: material.mtl
src/models/building_2/: material.mtl
src/models/building_4/: material.mtl
src/models/building_5/: material.mtl
src/models/building_6/: material.mtl
src/models/cart/: material.mtl
src/models/coaster/: material.mtl
src/models/coaster_rail/: material.mtl
src/models/cube/: cube.mtl  material.mtl
src/models/lamp_post_2/: material.mtl
src/models/lantern/: material.mtl
src/models/lantern_3/: material.mtl
src/models/rock/: material.mtl
src/models/room/: material.mtl
src/models/tree/: material.mtl
src/models/tree_1/: material.mtl
src/models/tree_4/: material.mtl
src/models/tree_6/: material.mtl
src/models/tree_8/: material.mtl
src/scene/: face.cpp  face.hpp  globject.cpp  globject.hpp  material.hpp  object_material.cpp  object_material.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  scene_object_material.cpp  scene_object_material.hpp  vertex.cpp  vertex.hpp
src/shader_structs/: ambient_light.cpp  ambient_light.hpp  directional_light.cpp  directional_light.hpp  fog_parameters.cpp  fog_parameters.hpp  material.cpp  material.hpp  point_light.cpp  point_light.hpp  shader_struct.cpp  shader_struct.hpp
src/shaders/: Color.frag  ColorTransform.vert  Texture.frag  TextureTransform.vert  depth.frag  depth.geom  depth.vert  main.frag  main.geom  main.vert  shadows.frag  shadows.vert
src/utils/: colors.hpp  colors_utils.hpp  math_utils.h  string_utils.hpp
